Random fixes from RTv3 project

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -16,14 +16,18 @@ COM_KUNENA_UNPUBLISHED="Unpublished"
 
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS="You have been banned! You do not have access to this function."
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS_EXPIRY="You are banned until %s"
-COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="This attachment is hidden for guests. Please log in or register to see it."
-COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="This image is hidden for guests. Please log in or register to see it."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="<em>This attachment is hidden for guests.<br />Please log in or register to see it.</em>"
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="<em>This image is hidden for guests.<br />Please log in or register to see it.</em>"
 
 ; JROOT/administrator/components/com_kunena/libraries/access.php
 
 COM_KUNENA_ACCESS_UNKNOWN="Unknown Access Control"
 COM_KUNENA_ACCESS_UNKNOWN_DESC="Access control option '%s' is currently disabled or cannot be controlled from Kunena."
 COM_KUNENA_INTEGRATION_UNKNOWN="[%s]"
+
+; JROOT/administrator/components/com_kunena/libraries/attachments.php
+
+COM_KUNENA_ATTACHMENT_NO_ACCESS="You are not authorised to see this attachment."
 
 ; JROOT/administrator/components/com_kunena/libraries/bbcode/bbcode.php
 
