--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -140,6 +140,11 @@ COM_KUNENA_ADMIN_RSS_SETTINGS="RSS Settings"
 COM_KUNENA_ALLOW_USERNAME_CHANGE="Allow Username Changes"
 COM_KUNENA_ALLOW_USERNAME_CHANGE_DESC="Allow users to change their username from the profile page."
 COM_KUNENA_AVATAR_QUALITY="Avatar Quality"
+COM_KUNENA_AVATAR_RESIZE_METHOD="Avatar Resize Method"
+COM_KUNENA_AVATAR_CROP="Avatar Cropping"
+COM_KUNENA_RESIZE_RESIZE="Resize (Basic - Faster)"
+COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
+COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Require E-mail"
 COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when users or visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limit Attachments"
@@ -181,6 +186,8 @@ COM_KUNENA_A_DISEMOTICONS="Disable Emoticons"
 COM_KUNENA_A_DISEMOTICONS_DESC="Set to <em>Yes</em> to completely disable graphic emoticons (smileys)."
 COM_KUNENA_A_DISPLAY_IMGFILES_TAB_MANAGEMENT_PROFILE="Display profile tab to manage attachments"
 COM_KUNENA_A_DISPLAY_IMGFILES_TAB_MANAGEMENT_PROFILE_DESC="Choose if you want display in the profile the tab to manage attachments"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Hide Super Users in user list"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be hidden in the global user list?"
 COM_KUNENA_A_DISPLAY_NAME="Display User Name"
 COM_KUNENA_A_DISPLAY_THANKYOU_NUMBERS="Visible Thank You Limit"
 COM_KUNENA_A_EBAYLANGUAGECODE="eBay Widget Language Code"
@@ -410,7 +417,7 @@ COM_KUNENA_COM_A_ORDERING_SYSTEM="Reply Numbering Inside Topic"
 COM_KUNENA_COM_A_REPORT="Message Reporting"
 COM_KUNENA_COM_A_REPORT_DESC="If you want to allow users to report any message, select <em>Yes</em>."
 COM_KUNENA_COM_A_REPORT_ORDERING_SYSTEM_DESC="Choose how messages will be numbered inside topic. You can show the post IDs ( #324, #465, #768... ) or incremental numbers (#1, #2, #3...)"
-COM_KUNENA_COM_A_SESSIONS_START_TIME_DESC="Show online users since a specific time in minutes."
+COM_KUNENA_COM_A_SESSIONS_START_TIME_DESC="Show online users since a specific time in seconds."
 COM_KUNENA_COM_A_SESSIONS_TYPE_DESC="Show online users with a specific setting."
 COM_KUNENA_COM_A_SHOW_TOPICS_FROM_LAST_TIME="Recent Topics Time Period"
 COM_KUNENA_COM_A_SHOW_TOPICS_FROM_LAST_TIME_DESC="Show recent topics from the following time."
