--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -81,6 +81,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_WRONG_CSS="Wrong file type given, only CSS files c
 ; JROOT/administrator/components/com_kunena/controllers/tools.php
 
 COM_KUNENA_ADMIN_RECOUNT_CATEGORIES_X="Recounting categories (%s)"
+COM_KUNENA_ADMIN_RECOUNT_POLLS_X="Recounting polls (%s)"
 COM_KUNENA_ADMIN_RECOUNT_TOPICS_X="Recounting topics (%s)"
 COM_KUNENA_ADMIN_RECOUNT_USERS_X="Recounting user activity (%s)"
 COM_KUNENA_ADMIN_RECOUNT_USERTOPICS_X="Recounting user activity in topics (%s)"
