--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -108,7 +108,7 @@ COM_KUNENA_AJAX_RECOUNT_WAIT="Recounting forum statistics, please wait!"
 COM_KUNENA_AJAX_ERROR="An Error Occurred"
 COM_KUNENA_AJAX_DETAILS_BELOW="Please see more details below."
 COM_KUNENA_AJAX_REQUESTED_RECOUNTED="Requested statistics were recounted."
-
+COM_KUNENA_TOOLS_UNINSTALL_LOGIN_FAILED="Login failed to launch uninstall process"
 
 ; JROOT/administrator/components/com_kunena/controllers/topicicons.php
 
