How to completely remove Kunena #2112 (Support TFA)

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -651,7 +651,7 @@ COM_KUNENA_C_PRUNETABDESC="Remove old topics (configurable)"
 COM_KUNENA_C_SYNCEUSERSDESC="Sync the Kunena user table with the Joomla user table"
 COM_KUNENA_GIT_INSTALL="Git Install"
 COM_KUNENA_RECOUNTFORUMS="Recount Category Statistics"
-COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="Uninstall Kunena Completly"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="Uninstall Kunena"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/menu.php
 
@@ -847,11 +847,15 @@ COM_KUNENA_DIAGNOSTICS_LABEL_DELETE_BROKEN_ITEMS="DELETE BROKEN ITEMS"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/uninstall.php
 
-COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Remove Kunena with it's data and all it's files."
-COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="This action will delete all your data in your database from you forum including categories, topics and attachments and the Kunena directories. If you don't have a backup there is no way to going back, please be sure to execute this.<br /> In order ot execute the process, you need to log in with a super-administrator account."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Uninstall Kunena"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="WARNING!"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Proceed with caution. This action is irreversible and will permanently delete this Kunena installation."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="All user data in the database including categories, topics, messages, and attachments will be deleted. Kunena installation directories will be removed from you Joomla install including the Kunena Site Component, Kunena Administrator Component, and Kunena Library. If you don't have a backup there is no way to go back and restore this data."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="In order to execute the process, you need to log in with a super-administrator account. If you have Two-Factor Authentication enabled you may need to include the authenticator code to proceed."
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_LOGIN="Username"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_PASSWORD="Password"
 COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="Execute the process"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="Secret key"
 
 ; Removed strings
 
