K3.1 Add more options gender

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -225,6 +225,8 @@ COM_KUNENA_MANAGE_ATTACHMENTS="Attachment Manager"
 COM_KUNENA_MYPROFILE_GENDER_FEMALE="Female"
 COM_KUNENA_MYPROFILE_GENDER_MALE="Male"
 COM_KUNENA_MYPROFILE_GENDER_UNKNOWN="Unknown"
+COM_KUNENA_MYPROFILE_GENDER_TRANS="Trans"
+COM_KUNENA_MYPROFILE_GENDER_CIS="Cis"
 COM_KUNENA_PMS_INBOX_NEW="New Private Messages: %s"
 COM_KUNENA_POST_LOCK_SET="The topic has been locked."
 COM_KUNENA_SEARCH_ADVSEARCH="Advanced Search"
