K3.1 Missing language strings #2422

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -237,3 +237,6 @@ COM_KUNENA_ALERT_WARNING_X="Warning: %s"
 COM_KUNENA_ALERT_ERROR_X="Error: %s"
 COM_KUNENA_ALERT_SUCCESS_X="Success: %s"
 COM_KUNENA_ALERT_INFO_X="Info: %s"
+
+COM_KUNENA_LIB_TIME_NOW="Just now"
+COM_KUNENA_LIB_TIME_AGO="%s ago"
