"Last visit date: Today" in profilebox #2301

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -240,3 +240,4 @@ COM_KUNENA_ALERT_INFO_X="Info: %s"
 
 COM_KUNENA_LIB_TIME_NOW="Just now"
 COM_KUNENA_LIB_TIME_AGO="%s ago"
+COM_KUNENA_MYPROFILE_LASTLOGIN="Last login"
