--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -241,3 +241,5 @@ COM_KUNENA_ALERT_INFO_X="Info: %s"
 COM_KUNENA_LIB_TIME_NOW="Just now"
 COM_KUNENA_LIB_TIME_AGO="%s ago"
 COM_KUNENA_MYPROFILE_LASTLOGIN="Last login"
+COM_KUNENA_VIEW_BLOCKED="Blocked"
+COM_KUNENA_RANK_BLOCKED="User is blocked"
