K3.1 Feature: max links (spam feature) #2499

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -80,6 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE="The topic has been successfully restored."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS="You have changed your vote!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS="Votes reseted successfully"
 COM_KUNENA_TOPIC_VOTE_SUCCESS="You have given your vote!"
+COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
