Fix language strings and move them to template

--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -189,6 +189,10 @@ COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION="Enter the full description of anno
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS="Less"
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE="More"
 
+; JROOT/components/com_kunena/site/template/crypsis/layouts/user/item/summary/default.php
+COM_KUNENA_PROFILE_VIEWS="Profile views"
+COM_KUNENA_THANK_YOU_RECEIVED="Thank you received"
+
 ; new Crypsis
 
 COM_KUNENA_GEN_CATEGORY="Category"
