export csv dmst

--- a/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.libraries.ini
@@ -185,7 +185,7 @@ COM_KUNENA_VIEW_POSTED="Δημοσιεύθηκε από"
 
 COM_KUNENA_THANKYOU_ALLREADY="Έχετε ήδη πει "_QQ_"Σε Ευχαριστώ"_QQ_" σε αυτό το μήνυμα"
 COM_KUNENA_THANKYOU_LOGIN="Παρακαλούμε συνδεθείτε για να πείτε "_QQ_"Σε Ευχαριστώ"_QQ_" σε αυτό το μήνυμα"
-COM_KUNENA_THANKYOU_NOT_PRESENT="Η ευχαριστία δεν μπορρεί να αφαιρεθεί: δεν υπάρχει"
+COM_KUNENA_THANKYOU_NOT_PRESENT="Η ευχαριστία δεν μπορεί να αφαιρεθεί: δεν υπάρχει"
 COM_KUNENA_THANKYOU_NOT_YOURSELF="Δεν μπορείτε να δώσετε Ευχαριστία για τον εαυτό σας!"
 
 ; JROOT/administrator/components/com_kunena/libraries/forum/statistics.php
@@ -224,8 +224,8 @@ COM_KUNENA_MODERATION_ERROR_NO_TARGET="Δεν μπορείτε να συντον
 COM_KUNENA_MODERATION_ERROR_SAME_TARGET_THREAD="Δεν μπορείτε να συντονίσετε το %s. Δεν επιτρέπεται η μετακίνηση του νήματος %s μέσα στο ίδιο το νήμα."
 COM_KUNENA_MODERATION_ERROR_WRONG_TARGET="Δεν μπορεί να μεταφερθεί το θέμα σε έναν άγνωστο προορισμό."
 COM_KUNENA_POST_ERROR_TOPIC_LOCKED="Το θέμα έχει κλειδωθεί."
-COM_KUNENA_LIB_TOPIC_AUTHORISE_FAILED_VOTE_POLL_EXPIRED="Η εξουσιοδοτηση απετυχε: Ο χρονος ζωντων δημοσκοπησεων εχει ληξει"
-COM_KUNENA_LIB_TOPIC_AUTHORISE_FAILED_VOTE_POLL_TOPIC_LOCKED="Η εξουδιοδότηση απέτυχε: Το θεμα ειναι κλειδωμενο, δεν μπορειτε να ψηφισετε πια."
+COM_KUNENA_LIB_TOPIC_AUTHORISE_FAILED_VOTE_POLL_EXPIRED="Η εξουσιοδότηση απέτυχε: Ο χρόνος ζώντων δημοσκοπήσεων έχει λήξει"
+COM_KUNENA_LIB_TOPIC_AUTHORISE_FAILED_VOTE_POLL_TOPIC_LOCKED="Η εξουδιοδότηση απέτυχε: Το θέμα είναι κλειδωμένο, δεν μπορείτε να ψηφίσετε πια."
 
 ; JROOT/administrator/components/com_kunena/libraries/html/html/kunenagrid.php
 
