--- a/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.sys.ini
@@ -13,11 +13,11 @@
 
 COM_KUNENA_CATEGORY_MANAGER="Διαχείριση Κατηγοριών"
 COM_KUNENA_CONFIGURATION="Ρυθμίσεις"
-COM_KUNENA_DASHBOARD="Πινακας εργαλειων"
+COM_KUNENA_DASHBOARD="Πίνακας εργαλείων"
 COM_KUNENA_EMOTICON_MANAGER="Διαχείριση Emoticons"
 COM_KUNENA_FILE_MANAGER="Διαχείριση Αρχείων"
 COM_KUNENA_FORUM_TOOLS="Εργαλεία Φόρουμ"
-COM_KUNENA_PLUGIN_MANAGER="Plug-in Διαχειριστης"
+COM_KUNENA_PLUGIN_MANAGER="Plug-in Διαχειριστής"
 COM_KUNENA_RANK_MANAGER="Διαχείριση Αξιωμάτων"
 COM_KUNENA_TEMPLATE_MANAGER="Διαχείριση Προτύπων"
 COM_KUNENA_TRASH_MANAGER="Διαχείριση Απορριμμάτων"
@@ -275,7 +275,7 @@ COM_KUNENA_POSTS_MODE_OPTION_DELETED="Διαγραμμένα Μηνύματα"
 COM_KUNENA_POSTS_MODE_OPTION_MYTHANKS="Ευχαριστίες που Έδωσα"
 COM_KUNENA_POSTS_MODE_OPTION_RECENT="Πρόσφατες Δημοσιεύσεις"
 COM_KUNENA_POSTS_MODE_OPTION_THANKYOU="Ευχαριστίες που Έλαβα"
-COM_KUNENA_POSTS_MODE_OPTION_UNAPROVED="Ανέγκριτα Μηνύματα"
+COM_KUNENA_POSTS_MODE_OPTION_UNAPROVED="Μη εγκεκριμένα Μηνύματα"
 
 ; JROOT/components/com_kunena/views/topics/tmpl/user.xml
 
