--- a/components/com_kunena/admin/language/el-GR/el-GR.plg_finder_kunena.sys.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.plg_finder_kunena.sys.ini
@@ -10,4 +10,4 @@
 
 
 PLG_FINDER_KUNENA="Έξυπνη Αναζήτηση - Kunena Φόρουμ"
-PLG_FINDER_KUNENA_DESCRIPTION="Αυτό το πρόσθετο ευρετηριάζει το Kunena Φόρουμ"
+PLG_FINDER_KUNENA_DESCRIPTION="Αυτό το πρόσθετο αναζητά ότι επιθυμείτε στο Kunena Φόρουμ"
