--- a/components/com_kunena/admin/language/el-GR/el-GR.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.plg_kunena_community.sys.ini
@@ -14,7 +14,7 @@ PLG_KUNENA_COMMUNITY_DESCRIPTION="Πρόσθετο Ενσωμάτωσης Kunena
 
 PLG_KUNENA_COMMUNITY_ACCESSTYPE_GROUP="Ομάδες JomSocial"
 PLG_KUNENA_COMMUNITY_ACCESS_GROUP_TITLE="Ομάδα JomSocial:"
-PLG_KUNENA_COMMUNITY_ACCESS_GROUP_DESC="Η Ομάδα JomSocial που έχει δικαίωμα να βλέπει αυτή τη κατηγορία."
+PLG_KUNENA_COMMUNITY_ACCESS_GROUP_DESC="Η Ομάδα JomSocial έχει δικαίωμα να βλέπει αυτή τη κατηγορία."
 
 PLG_KUNENA_COMMUNITY_ACCESS="Ενεργοποίηση Ελέγχου Πρόσβασης"
 PLG_KUNENA_COMMUNITY_ACCESS_DESC="Να περιοριστεί η πρόσβαση στις κατηγορίες Kunena για τα μέλη των ομάδων JomSocial για τις επιλεγμένες κατηγορίες. Για να χρησιμοποιήσετε αυτή την επιλογή, πρέπει να εγκαταστήσετε το πρόσθετο 'JomSocial - Kunena Groups'."
