--- a/components/com_kunena/site/language/el-GR/el-GR.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/el-GR/el-GR.com_kunena.controllers.ini
@@ -45,7 +45,7 @@ COM_KUNENA_FORUM="Φόρουμ"
 COM_KUNENA_POLL_CREATED="Η δημοσκόπηση δημιουργήθηκε με επιτυχία"
 COM_KUNENA_POLL_DELETED="Η δημοσκόπηση διαγράφηκε με επιτυχία"
 COM_KUNENA_POLL_EDITED="Η δημοσκόπηση τροποποιήθηκε με επιτυχία"
-COM_KUNENA_POST_FAVORITED_TOPIC="Η επιλογή Αγαπημένου προχώρησε"
+COM_KUNENA_POST_FAVORITED_TOPIC="Η επιλογή Αγαπημένου ήταν επιτυχής"
 COM_KUNENA_POST_LOCK_NOT_SET="Δεν ήταν δυνατό το κλείδωμα του θέματος."
 COM_KUNENA_POST_LOCK_NOT_UNSET="Δεν ήταν δυνατό το ξεκλείδωμα του θέματος."
 COM_KUNENA_POST_LOCK_UNSET="Το θέμα ξεκλειδώθηκε."
