--- a/components/com_kunena/site/language/el-GR/el-GR.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/el-GR/el-GR.com_kunena.tpl_blue_eagle.ini
@@ -111,9 +111,9 @@ COM_KUNENA_USRL_REGISTERED_USERS="%s έχει <b>%d</b> εγγεγραμμένο
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
 ; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is the default template for Kunena."
-COM_KUNENA_TEMPLATE_DISPLAY_MENU="Εμφανιση του Μενού Kunena"
-COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Εμφανίση του ενεργό Kunena μενού μέσα σε εναKunena πρότυπο. Απενεργοποιήστε αυτή τη δυνατότητα, αν θέλετε να χρησιμοποιήθει αντί για το κύριο μενού."
-COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Φόντο Κεφαλίδας Φόρουμ"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU="Εμφάνιση του Μενού Kunena"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Εμφανίση του ενεργό Kunena μενού μέσα σε ενα Kunena πρότυπο. Απενεργοποιήστε αυτή τη δυνατότητα, αν θέλετε να χρησιμοποιήθει αντί για το κύριο μενού."
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Φόντο Επικεφαλίδας Φόρουμ"
 ; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="Χρώμα Κατάδειξης Καρτέλας"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="Εισάγετε το χρώμα της καρτέλας μενού όταν περνάει ο δείκτης του ποντικιού από πάνω της."
