--- a/components/com_kunena/site/language/el-GR/el-GR.com_kunena.views.ini
+++ b/components/com_kunena/site/language/el-GR/el-GR.com_kunena.views.ini
@@ -33,7 +33,7 @@ COM_KUNENA_DISALLOW_POLLS="Απενεργοποίηση Δημοσκοπήσεω
 COM_KUNENA_ENABLE_REVIEW="Ενεργοποίηση Επιθεώρησης Δημοσιεύσεων"
 COM_KUNENA_GEN_FORUM_NEWPOST="Υπάρχουν νέες δημοσιεύσεις από την τελευταία σας επίσκεψη."
 COM_KUNENA_GEN_FORUM_NOTNEW="Δεν υπάρχουν νέες δημοσιεύσεις από την τελευταία σας επίσκεψη."
-COM_KUNENA_LOCK="Κλειδωμα"
+COM_KUNENA_LOCK="Κλείδωμα"
 COM_KUNENA_PUBLISH="Δημοσίευση"
 COM_KUNENA_SELECT_BATCH_OPTION="- Επιλογή δέσμης ενεργειών -"
 COM_KUNENA_UNLOCK="Ξεκλειδωμα"
@@ -46,7 +46,7 @@ COM_KUNENA_VIEW_CATEGORY_DEFAULT="Θέματα στο %s"
 ; JROOT/components/com_kunena/views/common/view.html.php
 
 COM_KUNENA_FORUM_TOP="Κατηγορίες θεμάτων"
-COM_KUNENA_LISTCAT_RSS="δείτε τις τελευταίες δημοσιεύσεις στην επιφάνεια εργασίας σας"
+COM_KUNENA_LISTCAT_RSS="Δείτε τις τελευταίες δημοσιεύσεις στην επιφάνεια εργασίας σας"
 COM_KUNENA_MENU_TOPIC_CREATE="Δημιουργία Θέματος"
 COM_KUNENA_MENU_TOPIC_EDIT="Επεξεργασία Θέματος"
 COM_KUNENA_MENU_TOPIC_REPLY="Απαντηση Θεματος"
@@ -69,7 +69,7 @@ COM_KUNENA_CREDITS_DESIGN="Σχεδιο"
 COM_KUNENA_CREDITS_LANGUAGES="Γλωσσες"
 COM_KUNENA_CREDITS_MODERATION="Συντονισμός του φορουμ"
 COM_KUNENA_CREDITS_SECURITY="Ασφάλεια"
-COM_KUNENA_CREDITS_TESTING="Δοκιμη"
+COM_KUNENA_CREDITS_TESTING="Δοκιμή"
 COM_KUNENA_CREDITS_FOUNDER="Ιδρυτής "
 COM_KUNENA_CREDITS_X_AND_Y="%s και %s"
 COM_KUNENA_CREDITS_THANKS="Η ομάδα του Kunena ευχαριστει την <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">κοινοτητα</a> για τη βοήθεια και την υποστήριξή της. Επίσης, εκτιμα την σκληρή δουλειά όλων των ανθρώπων που έχουν <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">μεταφρασει</a> το Kunena σε πολλές άλλες γλώσσες. Επιπλέον, θα θέλαμε να ευχαριστήσουμε πολλά μέλη του <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">www.kunena.org</a>, απο το παρελθόν και το παρόν, οι οποίοι <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">συνέβαλαν</a>  και βοήθησαν σε αυτή την σταθερή και χωρίς σφάλματα έκδοση."
@@ -79,8 +79,8 @@ COM_KUNENA_VIEW_CREDITS_DEFAULT="Εύσημα Ομάδας Kunena"
 ; JROOT/components/com_kunena/views/search/view.html.php
 
 COM_KUNENA_SEARCH_DATE_2WEEKS="2 εβδομάδες πριν"
-COM_KUNENA_SEARCH_DATE_3MONTHS="3 μήνρες πριν"
-COM_KUNENA_SEARCH_DATE_6MONTHS="6 μήνρες πριν"
+COM_KUNENA_SEARCH_DATE_3MONTHS="3 μήνες πριν"
+COM_KUNENA_SEARCH_DATE_6MONTHS="6 μήνες πριν"
 COM_KUNENA_SEARCH_DATE_ANY="Οποιαδήποτε ημερομηνία"
 COM_KUNENA_SEARCH_DATE_LASTVISIT="Τελευταία επίσκεψη"
 COM_KUNENA_SEARCH_DATE_MONTH="Ένα μήνα πριν"
