--- a/components/com_kunena/admin/language/el-GR/el-GR.plg_kunena_alphauserpoints.sys.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.plg_kunena_alphauserpoints.sys.ini
@@ -13,7 +13,7 @@ PLG_KUNENA_ALPHAUSERPOINTS="Ενσωμάτωση Kunena - AlphaUserPoints "
 PLG_KUNENA_ALPHAUSERPOINTS_DESCRIPTION="Πρόσθετο Ενσωμάτωσης Kunena για το AlphaUserPoints."
 
 PLG_KUNENA_ALPHAUSERPOINTS_ACTIVITY="Ενεργοποίηση Ροής Δραστηριότητας"
-PLG_KUNENA_ALPHAUSERPOINTS_ACTIVITY_DESC="Να προβάλλοντα τα συμβάντα του Kunena στη ροή δραστηριότητας του AlphaUserPoints"
+PLG_KUNENA_ALPHAUSERPOINTS_ACTIVITY_DESC="Να προβάλλονται τα συμβάντα του Kunena στη ροή δραστηριότητας του AlphaUserPoints"
 PLG_KUNENA_ALPHAUSERPOINTS_AVATAR="Ενεργοποίηση των Άβαταρ AlphaUserPoints"
 PLG_KUNENA_ALPHAUSERPOINTS_AVATAR_DESC="Να χρησιμοποιούνται οι εικόνες άβαταρ του AlphaUserPoints στο Kunena."
 PLG_KUNENA_ALPHAUSERPOINTS_PROFILE="Ενεργοποίηση των Προφίλ AlphaUserPoints"
