--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -484,6 +484,8 @@ COM_KUNENA_A_IP_TRACKING="IP Address Tracking"
 COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="User can report himself"
+COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Set to Yes if you want users can report himself on the messages"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
