Topic List Reorganization

--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -196,6 +196,8 @@ COM_KUNENA_THANK_YOU_RECEIVED="Thank you received"
 ; new Crypsis
 
 COM_KUNENA_GEN_CATEGORY="Category"
+COM_KUNENA_GEN_MESSAGE="Message"
+COM_KUNENA_GEN_SUBJECT="Subject"
 COM_KUNENA_GEN_AUTHOR="Author"
 COM_KUNENA_EDITOR_EMOTICONS_LABEL="Emoticons"
 COM_KUNENA_TOPICLIST_AUTHOR_LABEL="Author"
