--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -33,6 +33,8 @@ COM_KUNENA_X_HIDDEN="%d hidden"
 COM_KUNENA_SEE_ALL_SUBJECTS="See Complete List of Subjects"
 COM_KUNENA_SEE_MORE="See More..."
 
+COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUNBER_FILES="You have reached the maximum number of files allowed"
+
 ; JROOT/components/com_kunena/template/crypsis/html/category/default.php
 
 COM_KUNENA_FORUM_HEADER="Category Header"
