Fix issue after update, rewrite code on edit to be more correct

--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -205,6 +205,7 @@ COM_KUNENA_EDITOR_EMOTICONS_LABEL="Emoticons"
 COM_KUNENA_TOPICLIST_AUTHOR_LABEL="Author"
 COM_KUNENA_EDITOR_SMILIES="Smilies"
 COM_KUNENA_EDITOR_HELPLINE_SMILIES="Select a smiley in the list below or use emojis in the textarea"
+COM_KUNENA_TOPIC_LABEL_UPLOAD_DRAGDROPFILES="Attach files by dragging & dropping or selecting them here."
 
 ; Removed strings
 
